a more complex fileCalculator agent example implemented